--- a/src/App.css
+++ b/src/App.css
@@ -93,6 +93,7 @@ body {
    display: flex;
    flex-direction: column;
    gap: 20px;
+   padding: 0 15px;
 }
 
 .filter {
@@ -124,6 +125,7 @@ body {
 }
 .filter__button--completed {
    max-width: 25%;
+   min-width: 85px;
 }
 .filter__radio-input {
    appearance: none;
@@ -138,18 +140,32 @@ body {
    display: flex;
    gap: 20px;
 }
-.todo__input {
+.todo__main-label {
+   position: relative;
+}
+.todo__main-input {
    width: 100%;
    background-color: var(--main-background-color);
    border-radius: 5px;
-   padding: 10px 10px;
+   padding: 10px 45px 10px 10px;
    border: 2px solid var(--border-color);
    color: inherit;
    font-size: 20px;
    box-shadow: 0px 0px 7px var(--border-shadow-color);
 }
-.todo__input::placeholder {
+.todo__main-input::placeholder {
    color: var(--placeholder-color);
+}
+.todo__add-button {
+   position: absolute;
+   top: -4.5px;
+   right: 10px;
+   color: var(--main-text-color);
+   font-size: 22px;
+   background-color: transparent;
+   border: 2px solid var(--border-color);
+   border-radius: 5px;
+   padding: 0 8px;
 }
 .todo__list {
    display: flex;
@@ -184,10 +200,10 @@ body {
 .todo__not-found {
    font-size: 24px;
    text-align: center;
-   max-width: 350px;
+   max-width: 250px;
    width: 100%;
    margin: 0 auto;
-   padding: 30px 0;
+   padding: 20px 0;
    border: 4px dashed var(--border-color);
    border-radius: 5px;
    background-color: var(--main-background-color);
